--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <main>
         <article>
-            <h2>Title 2</h2>
+            <h2>Inebörden att vara frontend developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum exercitationem incidunt,
                 inventore, quas nihil excepturi vel quam laborum tempore dolore accusamus debitis ipsam.
                  Perferendis eaque qui reprehenderit beatae suscipit.</p>
@@ -27,7 +27,6 @@
 
         <aside>
             <article>
-                <h2>Title 2</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum exercitationem incidunt,
                     inventore, quas nihil excepturi vel quam laborum tempore dolore accusamus debitis ipsam.
                      Perferendis eaque qui reprehenderit beatae suscipit.</p>
