--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myself and i</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
 
     <header>
+        <h1>Anton Håkansson</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">About</a>
@@ -18,26 +21,44 @@
     </header>
 
     <main>
-        <article>
-            <h2>Inebörden att vara frontend developer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum exercitationem incidunt,
-                inventore, quas nihil excepturi vel quam laborum tempore dolore accusamus debitis ipsam.
-                 Perferendis eaque qui reprehenderit beatae suscipit.</p>
-        </article>
-
-        <aside>
+          
+        <section>
             <article>
+                <h2>Inebörden att vara frontend developer</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum exercitationem incidunt,
                     inventore, quas nihil excepturi vel quam laborum tempore dolore accusamus debitis ipsam.
-                     Perferendis eaque qui reprehenderit beatae suscipit.</p>
+                    Perferendis eaque qui reprehenderit beatae suscipit.</p>
             </article>
-        </aside>
-        <section>
-            <h2>Om mig själv</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non a repellendus magnam porro ipsam adipisci,
-                id deleniti? Accusamus nobis maxime optio alias perspiciatis dolores quisquam non harum aut? Delectus?</p>
+
+            <aside>
+                <h3>Btw kolla detta</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum rerum exercitationem incidunt,
+                    inventore, quas nihil excepturi vel quam laborum tempore dolore accusamus debitis ipsam.
+                    Perferendis eaque qui reprehenderit beatae suscipit.
+                </p>
+
+            </aside>
         </section>
+        <section>
+            <article>
+                <h2>Om mig själv</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis non a repellendus magnam porro
+                    ipsam
+                    adipisci,
+                    id deleniti? Accusamus nobis maxime optio alias perspiciatis dolores quisquam non harum aut?
+                    Delectus?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima similique recusandae repellat
+                    reiciendis
+                    accusamus? Quam impedit ex velit fuga incidunt. Vitae, nesciunt excepturi fugit sunt libero, quae
+                    rerum
+                    officiis
+                    repellat necessitatibus eum corporis aliquid optio! Minima rerum odio iste officia?</p>
+            </article>
+        </section>
+
 
     </main>
 </body>
+
 </html>
