--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <header>
         <h1>Anton Håkansson</h1>
         <nav>
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Portfolie</a>
-            <a href="#">Contact</a>
-        </nav>
+            <ul>
+                <li> <a href="#">Home</a></li>
+                <li> <a href="#">About</a></li>
+                <li> <a href="#">Portfolie</a></li>
+                <li> <a href="#">Contact</a></li>
+            </ul>
     </header>
 
     <main>
